[package]
name = "greenhouse"
authors = ["HexExecute <hex.execute@gmail.com>"]
version = "0.1.0"
edition = "2021"

[package.metadata]
chip = "ATSAMD21G18A"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-sdmmc = "0.4.0"
feather_m0 = "0.12.1"
usb-device = "0.2.9"
panic-halt = "0.2.0"
cortex-m-rtic = "1.1.4"
# bitflags = "2.3.1"
# bme280 = "0.4.4"
bme280-rs = "0.1.0"

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"
